--- a/README.adoc
+++ b/README.adoc
@@ -10,10 +10,10 @@ endif::[]
 
 :img-quality-gate: https://sonarcloud.io/api/project_badges/measure?project={sonar-project-id}&metric=alert_status{sonar-token}
 :img-coverage: https://sonarcloud.io/api/project_badges/measure?project={sonar-project-id}&metric=coverage{sonar-token}
-:img-maintainability: https://sonarcloud.io/api/project_badges/measure?project={sonar-project-id}&metric=sqale_rating
-:img-security-rating: https://sonarcloud.io/api/project_badges/measure?project={sonar-project-id}&metric=security_rating
-:img-reliability: https://sonarcloud.io/api/project_badges/measure?project={sonar-project-id}&metric=reliability_rating
-:img-techdebt: https://sonarcloud.io/api/project_badges/measure?project={sonar-project-id}&metric=sqale_index
+:img-maintainability: https://sonarcloud.io/api/project_badges/measure?project={sonar-project-id}&metric=sqale_rating}{sonar-token}
+:img-security-rating: https://sonarcloud.io/api/project_badges/measure?project={sonar-project-id}&metric=security_rating{sonar-token}
+:img-reliability: https://sonarcloud.io/api/project_badges/measure?project={sonar-project-id}&metric=reliability_rating{sonar-token}
+:img-techdebt: https://sonarcloud.io/api/project_badges/measure?project={sonar-project-id}&metric=sqale_index{sonar-token}
 
 :uri-analysis: https://sonarcloud.io/summary/new_code?id={sonar-project-id}
 
